--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
 <body>
  <div class="container">
     <h1>Sign Up</h1>
-    <p>Please fill in this form to create an account.</p>
+    <p>Enter your information here to sign up for an Open Mic Night invitation!</p>
     <hr>
 
     <label for="email"><b>Email</b></label>
     <input type="text" placeholder="Email@MailProvider.com" name="email" required>
 
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
-    
+    <label for="FirstName"> First Name </label>
+    <input type="text" id="FirstName"/>
+
+    <label for="LastName"> First Name </label>
+    <input type="text" id="LastName"/>
+
     <label>
-      <input type="checkbox" checked="checked" name="Signup" style="margin-bottom:15px"> notify me
+      <input type="checkbox" checked="checked" name="Signup" style="margin-bottom:15px"> Send me newsletters
     </label>
 
     <div class="clearfix">
