--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <title>Project 1</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" media="screen" href="css/main.css" />
+  <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 </head>
 <body>
- <div class="container">
-    <h1>Sign Up</h1>
+    <h1>Pinecone cottage coffee presents: </h1>
+    <h2> Open Mic Night </h2>
     <p>Enter your information here to sign up for an Open Mic Night invitation!</p>
     <hr>
 
@@ -14,19 +16,19 @@
     <input type="text" placeholder="Email@MailProvider.com" name="email" required>
 
     <label for="FirstName"> First Name </label>
-    <input type="text" id="FirstName"/>
+    <input type="text" placeholder="First Name" id="FirstName"/>
 
     <label for="LastName"> First Name </label>
-    <input type="text" id="LastName"/>
+    <input type="text" placeholder="Last Name" id="LastName"/>
 
     <label>
-      <input type="checkbox" checked="checked" name="Signup" style="margin-bottom:15px"> Send me newsletters
+      <input type="checkbox" checked="checked" name="Signup"> Send me newsletters
     </label>
 
-    <div class="clearfix">
+    
       <button type="button" class="cancelbtn">Cancel</button>
       <button type="submit" class="signupbtn">Sign Up</button>
-    </div>
-  </div>
+   
+  
   <script src="js/page.js" type="application/javascript"></script>
 </body>
