--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
     <h1>Pinecone cottage coffee presents: </h1>
     <h2> Open Mic Night </h2>
-    <p>Enter your information here to sign up for an Open Mic Night invitation!</p>
-    <hr>
+    <p>Enter your information here to reserve your performance slot</p>
 
     <label for="email"><b>Email</b></label>
     <input type="text" placeholder="Email@MailProvider.com" name="email" required>
