--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h2> Open Mic Night </h2>
     <p>Enter your information here to reserve your performance slot</p>
 
-    <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Email@MailProvider.com" name="email" required>
+    <label><b>Email</b></label>
+    <input type="email" placeholder="Email@MailProvider.com" name="email" required>
 
     <label for="FirstName"> First Name </label>
     <input type="text" placeholder="First Name" id="FirstName"/>
