--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <label for="FirstName"> First Name </label>
     <input type="text" placeholder="First Name" id="FirstName"/>
 
-    <label for="LastName"> First Name </label>
+    <label for="LastName"> Last Name </label>
     <input type="text" placeholder="Last Name" id="LastName"/>
 
     
