--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
  <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class = "nojs">
   <title>Project 1</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" media="screen" href="css/main.css" />
@@ -7,6 +7,8 @@
   <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 </head>
 <body>
+  <form>
+   <form method="get" action="#null" autocomplete="on">
     <h1>Pinecone cottage coffee presents: </h1>
     <h2> Open Mic Night </h2>
     <p>Enter your information here to reserve your performance slot</p>
@@ -17,12 +19,13 @@
     <label for="FirstName"> First Name </label>
     <input type="text" placeholder="First Name" id="FirstName"/>
 
-    <label for="LastName"> Last Name </label>
+    <label for="LastName"> First Name </label>
     <input type="text" placeholder="Last Name" id="LastName"/>
 
     
-      <button type="submit" class="signupbtn">Sign Up</button>
+      <button type="submit" class="signupbtn">Add Me To The List!</button>
    
   
   <script src="js/page.js" type="application/javascript"></script>
+</form>
 </body>
