--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <input type="email" placeholder="Email@MailProvider.com" name="email" required>
        <label for="FirstName"> First Name </label>
           <input type="text" placeholder="First Name" id="FirstName"/>
-       <label for="LastName"> First Name </label>
+       <label for="LastName"> Last Name </label>
          <input type="text" placeholder="Last Name" id="LastName"/>
       <button type="submit" class="signupbtn">Add Me To The List!</button>
 </form>
