--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-<form>
-   <form method="get" action="#null" autocomplete="on">
+  <form method="get" action="#null" autocomplete="on" name="SignUp" onsubmit="return ValidateForm();">
        <h1>Pinecone cottage coffee presents: </h1>
        <h2> Open Mic Night </h2>
        <p>Enter your information here to reserve your performance slot</p>
