--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
  <!DOCTYPE html>
 <html lang="en" class = "nojs">
-  <title>Project 1</title>
-  <meta charset="utf-8" />
-  <link rel="stylesheet" media="screen" href="css/main.css" />
-  <script src="js/page.js" type="application/javascript"></script>
-  <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
-</head>
+   <head>
+     <title>Project 1</title>
+     <meta charset="utf-8" />
+     <link rel="stylesheet" media="screen" href="css/main.css" />
+     <script src="js/page.js" type="application/javascript"></script>
+     <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+   </head>
 
 <body>
-  <form method="get" action="#null" autocomplete="on" name="SignUp" onsubmit="return ValidateForm();">
-       <h1>Pinecone cottage coffee presents: </h1>
-       <h2> Open Mic Night </h2>
-       <p>Enter your information here to reserve your performance slot</p>
+   <h1>Pinecone cottage coffee presents: </h1>
+   <h2> Open Mic Night </h2>
+   <p>Enter your information here to reserve your performance slot</p>
+   <form method="get" action="#null" autocomplete="on" name="SignUp" onsubmit="return ValidateForm();">
        <label><b>Email</b></label>
           <input type="email" placeholder="Email@MailProvider.com" name="email" required>
        <label for="FirstName"> First Name </label>
@@ -20,5 +21,6 @@
        <label for="LastName"> Last Name </label>
          <input type="text" placeholder="Last Name" id="LastName"/>
       <button type="submit" class="signupbtn">Add Me To The List!</button>
-</form>
+   </form>
 </body>
+</html>
